# django-salesman

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml
docs/: Makefile  adding_products.rst  checkout_and_payment.rst  conf.py  credits.rst  index.rst  installation.rst
docs/advanced/: address_validation.rst  basket_modifiers.rst  custom_formatters.rst  custom_validators.rst  order_customization.rst  payment_methods.rst  price_formatting.rst  sending_notifications.rst  swappable_models.rst
docs/api/: basket.rst  checkout.rst  orders.rst
docs/reference/: admin.rst  basket.rst  checkout.rst  core.rst  index.rst  orders.rst  settings.rst
docs/releases/: 0.1.0.rst  0.1.1.rst  0.1.2.rst  0.1.3.rst  0.1.4.rst  0.1.5.rst  0.1.6.rst  0.1.7.rst  1.0.0.rst  1.0.1.rst  1.0.2.rst  1.0.3.rst  1.0.4.rst  1.0.5.rst  1.0.6.rst  1.1.0.rst  1.1.1.rst  1.1.2.rst  1.1.3.rst  1.1.4.rst  1.1.5.rst  1.1.6.rst  1.2.0.rst  1.2.1.rst  1.3.0.rst  dev.rst  index.rst  unreleased.rst
example/: README.md
example/project/: settings.py  urls.py
example/shop/: __init__.py  apps.py  models.py  modifiers.py  payment.py  serializers.py  signals.py  utils.py  wagtail_hooks.py
example/shop/management/commands/: create_dummy_products.py  phones.json  products.json
example/shop/migrations/: 0001_initial.py  0002_rename_owner_field.py
example/shop/models/: __init__.py  basket.py  order.py  product.py
example/shop/modifiers/: __init__.py  basic.py  complex.py
example/shop/payment/: __init__.py  admin.py  advance.py  credit_card.py  on_delivery.py
example/tests/: dummy.py  settings.py  test_conf.py
example/tests/admin/: test_admin.py  test_admin_edit_handlers.py  test_admin_mixins.py  test_admin_models.py  test_admin_panels.py  test_admin_utils.py  test_admin_wagtail_hooks.py
example/tests/basket/: test_basket_api.py  test_basket_models.py  test_basket_modifiers.py  test_basket_views.py
example/tests/checkout/: test_checkout_api.py  test_checkout_payment.py  test_checkout_utils.py  test_checkout_views.py
example/tests/core/: test_core_models.py  test_core_utils.py
example/tests/orders/: test_orders_api.py  test_orders_models.py  test_orders_signals.py  test_orders_status.py  test_orders_utils.py  test_orders_views.py
salesman/: __init__.py  conf.py  urls.py
salesman/admin/: __init__.py  admin.py  apps.py  edit_handlers.py  filters.py  forms.py  helpers.py  mixins.py  models.py  utils.py  views.py  wagtail_hooks.py  widgets.py
salesman/admin/migrations/: 0001_initial.py
salesman/admin/static/salesman/admin/: wagtail_form.css
salesman/admin/templates/salesman/admin/: change_form.html  refund.html  wagtail_edit.html  wagtail_refund.html
salesman/admin/templates/salesman/admin/includes/: refund_content.html  refund_js.html
salesman/admin/wagtail/: edit_handlers.py  forms.py  helpers.py  mixins.py  panels.py  views.py
salesman/basket/: __init__.py  api.py  apps.py  models.py  modifiers.py  serializers.py  utils.py  views.py
salesman/basket/migrations/: 0001_initial.py  0002_alter_json_fields.py  0003_rename_owner_field.py
salesman/checkout/: __init__.py  api.py  apps.py  payment.py  serializers.py  utils.py  views.py
salesman/core/: __init__.py  apps.py  models.py  serializers.py  typing.py  utils.py
salesman/orders/: __init__.py  api.py  apps.py  models.py  serializers.py  signals.py  status.py  utils.py  views.py
salesman/orders/migrations/: 0001_initial.py  0002_alter_order_ref.py  0003_alter_json_fields.py
